<?xml version="1.0"?>
<package format="3">
  <name>bt_navigator</name>
  <version>0.0.1</version>
  <description>BT Navigator for TurtleBot3</description>
  <maintainer email="tasz@todo.todo">tasz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>