<?xml version="1.0"?>
<package format="3">
  <name>patrol_bt_pkg</name>
  <version>0.0.1</version>
  <description>Patrol robot using Nav2 Behavior Trees</description>
  <maintainer email="you@email.com">you</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>ament_index_python</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>